# sapper-ts

./: .gitignore  README.md  filetypes.conf  ignore.conf  package.json  rollup.config.js  tsconfig.build.json  tsconfig.json
native/: Cargo.toml
src/: app.controller.ts  config.ts  native.ts  server.js  template.html
static/: manifest.json
types/: DatabaseDocuments.d.ts  UserFile.d.ts
